# Programmieren2_TU_Wien

./: .clang-format  CMakeLists.txt
Homework1/: .gitignore  README.md
Homework1/src/: Vector.c
Homework1/test/: CMakeLists.txt  test_push_pop_back.c  test_push_pop_front.c
Homework2/: .clang-format  .gitignore  CMakeLists.txt  README.md
Homework2/Homework2PartB/: Vector.c  Vector.h  task.c
Homework2/include/: Vector.h  helpers.h  numerics.h
Homework2/src/: Vector.c  numerics.c
Homework2/test/: CMakeLists.txt  test_grad.c  test_integrate.c  test_interpolate.c  test_linspace.c  test_sample.c
Homework2/test_vector/: CMakeLists.txt  test_erase.c  test_init_free.c  test_insert_before.c  test_new_delete.c  test_push_pop_back.c  test_push_pop_front.c  test_reserve_shrink.c  test_reverse.c
Homework3/: CMakeLists.txt  HOMEWORK.md  LIST.md  README.md
Homework3/Homework3PartB/: List.c  List.h  task.c
Homework3/include/: List.h
Homework3/labtask/: CMakeLists.txt  README.md  test_insert_before_insert_after.c  test_push_front_pop_front.c
Homework3/src/: List.c
Homework3/test/: CMakeLists.txt  test_clear_size.c  test_clone.c  test_concat.c  test_find.c  test_new_delete.c  test_node_at.c  test_push_back_pop_back.c  test_reverse.c
Homework4/: CMakeLists.txt  README.md
Homework4/Homework4PartB/: Book.c  Book.h  Hash.h  HashTable.c  HashTable.h  task.c
Homework4/example/: CMakeLists.txt  main_cache.c  main_hashtable.c  programming_books_10.txt  programming_books_100.txt  programming_books_7142.txt
Homework4/include/: Book.h  Cache.h  HashTable.h  Hashes.h  Logger.h
Homework4/src/: Book.c  Cache.c  HashTable.c  Logger.c
Homework4/test_cache/: CMakeLists.txt  test_cache_clear.c  test_cache_erase.c  test_cache_find.c  test_cache_insert.c  test_cache_new_delete.c  test_cache_resize.c
Homework4/test_hashtable/: CMakeLists.txt  test_hashtable_clear.c  test_hashtable_erase.c  test_hashtable_find.c  test_hashtable_insert.c  test_hashtable_new_delete.c  test_hashtable_resize.c
include/: Vector.h
src/: Vector.c
test/: test_erase.c  test_init_free.c  test_insert_before.c  test_reverse.c
